[package]
name = "rust-idly"
version = "0.1.0"
authors = ["Marcus <sakae@inpact.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
timer = "0.2.0"
futures = "0.3.6"
tokio = { version = "0.3", features = ["full"] }
cron-parser = "0.7.6"
bevy = "0.2.1"
rand = "0.7.3"